# MeuBotDLL

./: .gitignore  CMakeLists.txt  CEasyBot-mainbuild_out.txt  HOW TO ADD NEW SERVERS  INTEGRATION_GUIDE.cpp  OffsetResolver.cpp  OffsetResolver.h  README.md  README_OffsetResolver.md  bot.proto  build.bat  build2.bat  const.h  dobuild.bat  dobuild2.bat  dobuild3.bat  proto_functions_client.cpp  proto_functions_client.h  proto_functions_server.cpp  proto_functions_server.h
src/EasyBot_DLL/: CMakeLists.txt  EasyBot_DLL.cpp
src/EasyBot_DLL/BotCore/: AutoPatternFinder.cpp  AutoPatternFinder.h  BuildConfig.h  CachedGameState.h  Container.cpp  Container.h  Creature.cpp  Creature.h  CustomFunctions.cpp  CustomFunctions.h  EventDispatcher.cpp  EventDispatcher.h  Game.cpp  Game.h  GameStateUpdater.cpp  GameStateUpdater.h  Item.cpp  Item.h  LocalPlayer.cpp  LocalPlayer.h  Map.cpp  Map.h  OffsetResolverBridge.cpp  ServerConfig.cpp  ServerConfig.h  ServerDialog.cpp  ServerDialog.h  ServerProfile.cpp  ServerProfile.h  ServerScanner.cpp  ServerScanner.h  Thing.cpp  Thing.h  Tile.cpp  Tile.h  declarations.h  hooks.cpp  hooks.h  offsets_global.h  pattern_scan.cpp  (+2 more)
src/EasyBot_Scripts/: Bot_Functions.py  CMakeLists.txt  EasyBotPython_Scripts.py  EasyBot_Scripts.cpp  bot_pb2.py  bot_pb2_grpc.py
